<resources>
    <string name="app_name">KotlinLessonSix</string>
    <string name="sing_in">Sing In</string>
    <string name="sing_up">Sing Up</string>
    <string name="avatar">Avatar</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Имя</string>
    <string name="name2">Фамилия</string>
    <string name="name3">Отчество</string>
    <string name="done">Готово</string>
</resources>